# AURA

./: .gitignore  APP_DEV_GUIDE.md  CREDENTIALS.md  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  README.md
Beacon/Production/: beacon_client.py  pyproject.toml
Beacon/Prototype-1/: Readme.md  test.py
Beacon/Prototype-2/: BeaconMgr.py  Readme.md  example.py  main.py  pyproject.toml
Frontend/Admin/: README.md  index.html  package-lock.json  package.json
Frontend/Admin/src/: App.tsx
Frontend/Admin/src/lib/: api.ts
Frontend/Admin/src/pages/: Attendance.tsx  Courses.tsx  Dashboard.tsx  Login.tsx  Professors.tsx  Students.tsx  Timetable.tsx
Frontend/Professor/: README.md  index.html  package-lock.json  package.json
Frontend/Professor/src/: App.tsx  index.css
Frontend/Professor/src/context/: AuthContext.tsx
Frontend/Professor/src/lib/: api.ts
Frontend/Professor/src/pages/: Home.tsx  Login.tsx  Statistics.tsx
Server/: README.md  pyproject.toml  reproduce_login_issue.py  seed_test_data.py  student_sim.py  verify_api_response.py  verify_data.py  verify_schema.py  verify_system.py
Server/app/: main.py
Server/app/api/: api.py  deps.py
Server/app/api/routers/: admin.py  auth.py  professor.py  student.py
Server/app/core/: config.py  database.py  mqtt.py  mqtt_listener.py  security.py
Server/app/models/: __init__.py  academic.py  attendance.py  schedule.py  user.py
Server/app/schemas/: __init__.py  academic.py  admin_stats.py  attendance.py  student.py  user.py
Server/beacon_controller/: beacon_controller.py
(+4 files in other folders)
